# CLI-Anything

./: .gitignore  CITATION.cff  README.md  README_CN.md  README_JA.md  registry.json
browser/agent-harness/cli_anything/browser/tests/: test_domshell_backend.py
browser/agent-harness/cli_anything/browser/utils/: domshell_backend.py
joplin/agent-harness/cli_anything/joplin/: joplin_cli.py
joplin/agent-harness/cli_anything/joplin/core/: session.py
joplin/agent-harness/cli_anything/joplin/tests/: test_core.py
joplin/agent-harness/cli_anything/joplin/utils/: joplin_backend.py
jumpserver/agent-harness/: JUMPSERVER.md  pyproject.toml  setup.py
jumpserver/agent-harness/cli_anything/jumpserver/: README.md  __init__.py  __main__.py  jumpserver_cli.py
jumpserver/agent-harness/cli_anything/jumpserver/core/: __init__.py  commands_account.py  commands_asset.py  commands_audit.py  commands_auth.py  commands_perm.py  commands_session.py  commands_system.py  commands_user.py  output.py  session.py  state.py
jumpserver/agent-harness/cli_anything/jumpserver/skills/: SKILL.md
jumpserver/agent-harness/cli_anything/jumpserver/tests/: TEST.md  test_core.py  test_full_e2e.py
jumpserver/agent-harness/cli_anything/jumpserver/utils/: __init__.py
reasonix-skill/: README.md  SKILL.md
siyuan/agent-harness/cli_anything/siyuan/: siyuan_cli.py
siyuan/agent-harness/cli_anything/siyuan/core/: client.py
siyuan/agent-harness/cli_anything/siyuan/tests/: test_full_e2e.py
skills/cli-anything-calibre/: SKILL.md
skills/cli-anything-jumpserver/: SKILL.md
skills/cli-anything-wavetone/: SKILL.md
(+3 files in other folders)
