[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-anything-jumpserver"
version = "0.1.0"
description = "Stateful CLI harness for JumpServer bastion host management"
readme = "cli_anything/jumpserver/README.md"
license = { text = "MIT" }
authors = [
    { name = "cli-anything" }
]
keywords = ["jumpserver", "bastion", "pam", "cli", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage = "https://github.com/cli-anything/cli-anything-jumpserver"
Source = "https://github.com/cli-anything/cli-anything-jumpserver"
Issues = "https://github.com/cli-anything/cli-anything-jumpserver/issues"

[project.scripts]
cli-anything-jumpserver = "cli_anything.jumpserver.jumpserver_cli:cli_main"

[tool.setuptools.packages.find]
include = ["cli_anything.*"]

[tool.pytest.ini_options]
testpaths = ["cli_anything/jumpserver/tests"]
addopts = "-v --tb=short"
